--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -32,7 +32,14 @@ body {
                 background-color: #ddd;
             }
         }
+        text-align: center;
         
+    }
+
+    &:last-child .dropdown-content {
+        @media screen and (min-width: 960px) {
+            right: 0;
+        }
     }
 }
 main {
